add resourcebuffer and universe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,10 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "functional": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "filesystem": "cpp",
+        "iomanip": "cpp",
+        "sstream": "cpp",
+        "unordered_map": "cpp"
     }
 }
