add a little examples

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
             "label": "Build",
             "type": "shell",
             "command": "${workspaceFolder}/build.bat",
+            "args": ["${fileBasename}"],
             "group": {
                 "kind": "build",
                 "isDefault": true
